--- a/testapp/prj.conf
+++ b/testapp/prj.conf
@@ -1,3 +1,4 @@
+#BT CONFIGS FOR DIS PROFILE STARTS
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 
@@ -16,6 +17,7 @@ CONFIG_BT_DIS_SW_REV_STR="Zephyr Software"
 
 CONFIG_BT_DEVICE_NAME="DIS peripheral"
 
+
 # Below is setup to let DIS information be read from settings
 CONFIG_BT_SETTINGS=y
 CONFIG_SETTINGS_RUNTIME=y
@@ -24,7 +26,20 @@ CONFIG_SETTINGS_NONE=y
 
 CONFIG_BT_DIS_SETTINGS=y
 CONFIG_BT_DIS_STR_MAX=21
+#BT CONFIGS FOR DIS PROFILE ENDS
 
-# Below are used for Test APP
+# Below are used for Test APP STARTS HERE
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_GETLINE=y
+# Below are used for Test APP ENDS HERE
+
+#BT SECURE Connection Starts
+
+CONFIG_BT_SMP=y
+
+# enable the possibility of LE Secure Connections
+CONFIG_BT_TINYCRYPT_ECC=y
+
+# specify Secure Connections Only mode
+CONFIG_BT_SMP_SC_ONLY=y
+#BT SECURE Connection Ends
