--- a/testapp/CMakeLists.txt
+++ b/testapp/CMakeLists.txt
@@ -1,7 +1,12 @@
-# SPDX-License-Identifier: Apache-2.0
-
 cmake_minimum_required(VERSION 3.13.1)
-find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
-project(testapp)
 
-target_sources(app PRIVATE src/main.c src/test_app.c src/bt_specific.c)
+include($ENV{ZEPHYR_BASE}/cmake/app/boilerplate.cmake NO_POLICY_SCOPE)
+project(just_works)
+
+FILE(GLOB app_sources src/*.c)
+target_sources(app PRIVATE
+  ${app_sources}
+    src/services/custom_service.c
+  )
+
+zephyr_library_include_directories(src)
