--- a/testapp/prj.conf
+++ b/testapp/prj.conf
@@ -1,31 +1,43 @@
-#BT CONFIGS FOR DIS PROFILE STARTS
+# needed to ensure keys are persisted
 CONFIG_BT=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_FCB=y
+CONFIG_SETTINGS=y
+CONFIG_BT_SETTINGS=y
 CONFIG_BT_PERIPHERAL=y
+CONFIG_BT_GATT_DYNAMIC_DB=y
+CONFIG_BT_DEVICE_NAME="LVL1NONE"
 
-CONFIG_BT_DIS=y
-CONFIG_BT_DIS_PNP=n
-CONFIG_BT_DIS_MODEL="Zephyr Model"
-CONFIG_BT_DIS_MANUF="Zephyr"
-CONFIG_BT_DIS_SERIAL_NUMBER=y
-CONFIG_BT_DIS_FW_REV=y
-CONFIG_BT_DIS_HW_REV=y
-CONFIG_BT_DIS_SW_REV=y
-CONFIG_BT_DIS_SERIAL_NUMBER_STR="Zephyr Serial"
-CONFIG_BT_DIS_FW_REV_STR="Zephyr Firmware"
-CONFIG_BT_DIS_HW_REV_STR="Zephyr Hardware"
-CONFIG_BT_DIS_SW_REV_STR="Zephyr Software"
+#BT CONFIGS FOR DIS PROFILE STARTS
+#CONFIG_BT=y
+#CONFIG_BT_PERIPHERAL=y
 
-CONFIG_BT_DEVICE_NAME="DIS peripheral"
+#CONFIG_BT_DIS=y
+#CONFIG_BT_DIS_PNP=n
+#CONFIG_BT_DIS_MODEL="Zephyr Model"
+#CONFIG_BT_DIS_MANUF="Zephyr"
+#CONFIG_BT_DIS_SERIAL_NUMBER=y
+#CONFIG_BT_DIS_FW_REV=y
+#CONFIG_BT_DIS_HW_REV=y
+#CONFIG_BT_DIS_SW_REV=y
+#CONFIG_BT_DIS_SERIAL_NUMBER_STR="Zephyr Serial"
+#CONFIG_BT_DIS_FW_REV_STR="Zephyr Firmware"
+#CONFIG_BT_DIS_HW_REV_STR="Zephyr Hardware"
+#CONFIG_BT_DIS_SW_REV_STR="Zephyr Software"
+
+#CONFIG_BT_DEVICE_NAME="DIS peripheral"
 
 
 # Below is setup to let DIS information be read from settings
 CONFIG_BT_SETTINGS=y
-CONFIG_SETTINGS_RUNTIME=y
-CONFIG_SETTINGS=y
-CONFIG_SETTINGS_NONE=y
+#CONFIG_SETTINGS_RUNTIME=y
+#CONFIG_SETTINGS=y
+#CONFIG_SETTINGS_NONE=y
 
-CONFIG_BT_DIS_SETTINGS=y
-CONFIG_BT_DIS_STR_MAX=21
+#CONFIG_BT_DIS_SETTINGS=y
+#CONFIG_BT_DIS_STR_MAX=21
 #BT CONFIGS FOR DIS PROFILE ENDS
 
 # Below are used for Test APP STARTS HERE
@@ -43,3 +55,7 @@ CONFIG_BT_TINYCRYPT_ECC=y
 # specify Secure Connections Only mode
 CONFIG_BT_SMP_SC_ONLY=y
 #BT SECURE Connection Ends
+
+#Want to use a Static Random BT Address
+CONFIG_BT_PRIVACY=n
+#End Want to use a Static Random BT Address
